--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Post Form</h1>
+<h1>New Student</h1>
 <%= form_tag posts_path do %>
 <label>First name:</label><br>
 <%= text_field_tag :'student[first_name]' %><br>
