--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Student</h1>
-<%= form_tag posts_path do %>
+<%= form_tag students_path do %>
 <label>First name:</label><br>
 <%= text_field_tag :'student[first_name]' %><br>
 
